crates/unsoundness_checker/tests/snapshots/rules/type_checking_directive_used/markdown_test__snippet_04.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
warning[type-checking-directive-used]: Type checking directive `pyrefly: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # pyrefly: ignore
  |              ^^^^^^^^^^^^^^^^^
2 |
3 | res = foo()  # pyrefly: ignore[unknown-name]
  |
info: rule `type-checking-directive-used` was selected in the configuration file

warning[type-checking-directive-used]: Type checking directive `pyrefly: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:3:14
  |
1 | res = foo()  # pyrefly: ignore
2 |
3 | res = foo()  # pyrefly: ignore[unknown-name]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file
